<resources>
    <string name="app_name">Fooddy</string>
    <string name="favorite_recipes">Favorites</string>
    <string name="food_joke">Food Joke</string>
    <string name="recipes">Recipes</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="main_course">Main Course</string>
    <string name="salad">Salad</string>
    <string name="appetizer">Appetizer</string>
    <string name="dessert">Dessert</string>
    <string name="side_dish">Side Dish</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole30</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="no_favorites_recipe_found">No Favorites Recipe Found</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
</resources>