<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_bottom_sheet_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/meal_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="Meal Type"
        android:textColor="@color/darker"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/meal_type_chip_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:checkedChip="@+id/meal_type_main_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_text_view"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_main_course"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_course" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_side_dish"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_dish" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_dessert"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dessert" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_appetizer"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appetizer" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_salad"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salad" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_bread"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bread" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_breakfast"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_soup"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soup" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_beverage"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beverage" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_sauce"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sauce" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_marinade"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marinade" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_fingerfood"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingerfood" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_snack"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snack" />

        <com.google.android.material.chip.Chip
            android:id="@+id/meal_type_drink"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink" />
    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:id="@+id/diet_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="Diet Type"
        android:textColor="@color/darker"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_chip_group" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/diet_type_chip_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:checkedChip="@+id/diet_type_gluten_free"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/diet_type_text_view"
        app:layout_constraintTop_toBottomOf="@+id/diet_type_text_view"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_gluten_free"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gluten_free" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_ketogenic"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/ketogenic" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_vegetarian"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/vegetarian" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_lacto_vegetarian"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/lacto_vegetarian" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_ovo_vegetarian"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/ovo_vegetarian" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_vegan"
            style="@style/CustomChipStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegan" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_pescetarian"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/pescetarian" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_paleo"
            style="@style/CustomChipStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paleo" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_primal"
            style="@style/CustomChipStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primal" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_type_whole_30"
            style="@style/CustomChipStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole_30" />


    </com.google.android.material.chip.ChipGroup>


    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:text="Apply"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_type_chip_group" />
</androidx.constraintlayout.widget.ConstraintLayout>