<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="np.com.mkishor.fooddy.ui.fragments.recipes.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_recipesFragment_to_recipeBottomSheet"
            app:destination="@id/recipeBottomSheet" />
    </fragment>
    <fragment
        android:id="@+id/favoriteRecipesFragment"
        android:name="np.com.mkishor.fooddy.ui.fragments.favorites.FavoriteRecipesFragment"
        android:label="@string/favorite_recipes"
        tools:layout="@layout/fragment_favorite_recipes" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="np.com.mkishor.fooddy.ui.fragments.food_joke.FoodJokeFragment"
        android:label="@string/food_joke"
        tools:layout="@layout/fragment_food_joke" />
    <dialog
        android:id="@+id/recipeBottomSheet"
        android:name="np.com.mkishor.fooddy.ui.fragments.recipes.bottomsheet.RecipeBottomSheet"
        android:label="RecipeBottomSheet"
        tools:layout="@layout/recipes_bottom_sheet">
        <action
            android:id="@+id/action_recipeBottomSheet_to_recipesFragment"
            app:destination="@id/recipesFragment" />
    </dialog>
</navigation>