<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.details.OverviewFragment">

    <ImageView
        android:id="@+id/details_image_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/view7"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/details_image_view"
        app:layout_constraintEnd_toEndOf="@+id/details_image_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/details_image_view"
        app:layout_constraintTop_toTopOf="@+id/details_image_view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/details_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/details_image_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/details_time_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/details_time_text_view"
        app:layout_constraintEnd_toEndOf="@+id/details_time_text_view"
        app:layout_constraintStart_toStartOf="@+id/details_time_text_view"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/details_like_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/details_time_text_view"
        app:layout_constraintEnd_toStartOf="@+id/details_time_text_view" />

    <ImageView
        android:id="@+id/details_like_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/details_like_text_view"
        app:layout_constraintEnd_toEndOf="@+id/details_like_text_view"
        app:layout_constraintStart_toStartOf="@+id/details_like_text_view"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/details_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="TextView"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_image_view" />

    <ImageView
        android:id="@+id/details_vegetable_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/details_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/details_title_text_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/details_vegetarian_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/details_vegetable_image_view"
        app:layout_constraintStart_toEndOf="@+id/details_vegetable_image_view"
        app:layout_constraintTop_toTopOf="@+id/details_vegetable_image_view" />

    <ImageView
        android:id="@+id/details_vegan_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/details_vegetable_image_view"
        app:layout_constraintTop_toBottomOf="@+id/details_vegetable_image_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/details_vegan_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"

        app:layout_constraintBottom_toBottomOf="@+id/details_vegan_image_view"
        app:layout_constraintStart_toEndOf="@+id/details_vegan_image_view"
        app:layout_constraintTop_toTopOf="@+id/details_vegan_image_view" />

    <ImageView
        android:id="@+id/details_dairy_free_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintBottom_toBottomOf="@+id/details_vegetarian_text_view"
        app:layout_constraintStart_toEndOf="@+id/details_vegetarian_text_view"
        app:layout_constraintTop_toTopOf="@+id/details_vegetarian_text_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/details_dairy_free_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Dairy Free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/details_dairy_free_image_view"
        app:layout_constraintStart_toEndOf="@+id/details_dairy_free_image_view"
        app:layout_constraintTop_toTopOf="@+id/details_dairy_free_image_view" />

    <ImageView
        android:id="@+id/details_gluten_free_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"

        app:layout_constraintStart_toStartOf="@+id/details_dairy_free_image_view"
        app:layout_constraintTop_toBottomOf="@+id/details_dairy_free_image_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/details_gluten_free_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/details_gluten_free_image_view"
        app:layout_constraintStart_toEndOf="@+id/details_gluten_free_image_view"
        app:layout_constraintTop_toTopOf="@+id/details_gluten_free_image_view" />

    <ImageView
        android:id="@+id/details_healthy_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_check_mark"

        app:layout_constraintBottom_toBottomOf="@+id/details_dairy_free_text_view"
        app:layout_constraintStart_toEndOf="@+id/details_dairy_free_text_view"
        app:layout_constraintTop_toTopOf="@+id/details_dairy_free_text_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/details_healthy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Healthy"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/details_healthy_image_view"
        app:layout_constraintStart_toEndOf="@+id/details_healthy_image_view"
        app:layout_constraintTop_toTopOf="@+id/details_healthy_image_view" />

    <ImageView
        android:id="@+id/details_cheap_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/details_healthy_image_view"
        app:layout_constraintTop_toBottomOf="@+id/details_healthy_image_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/details_cheap_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Cheap"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/details_cheap_image_view"
        app:layout_constraintStart_toEndOf="@+id/details_cheap_image_view"
        app:layout_constraintTop_toTopOf="@+id/details_cheap_image_view" />

    <TextView
        android:id="@+id/details_description_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_vegan_image_view" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_description_label_text_view"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_description_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textColor="@color/darkGray"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>